k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordle-game
  # Tworzy odizolowaną przestrzeń w klastrze specjalnie dla gry.
