k8s/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordle-db
  namespace: wordle-game
spec:
  serviceName: "wordle-db-svc"
  replicas: 1
  selector:
    matchLabels:
      app: wordle-db
  template:
    metadata:
      labels:
        app: wordle-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-placeholder
          mountPath: /var/lib/postgresql/data
  # dzięki volumeClaimTemplates dane przetrwają restarty podów
  volumeClaimTemplates: 
  - metadata:
      name: db-placeholder
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
