k8s/frontend-deployment.yaml
# konfigurację kontenerów (kto, ile replik, jakie limity)

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordle-frontend
  namespace: wordle-game
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: wordle-frontend
  template:
    metadata:
      labels:
        app: wordle-frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
      containers:
      - name: frontend
        image: wworonecka/wordle-frontend:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 20
          failureThreshold: 3
