k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordle-ingress
  namespace: wordle-game
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: wordle-backend-svc
            port:
              number: 3000
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: wordle-frontend-svc
            port:
              number: 80
# Wpuszcza ruch z internetu prosto do Twojej usługi backendowej.
